--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "core-js": "^3.6.5",
+    "deep-object-diff": "^1.1.7",
     "font-awesome": "^4.7.0",
     "ip": "^1.1.8",
     "joi": "^17.6.0",
     "mdi-vue": "^3.0.12",
+    "uuid": "^9.0.0",
     "view-design": "^4.7.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
